--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ code {
     monospace;
 }
 
+/* .content {
+  display: flex;
+  width: 1000px;
+} */
+
 .movie ul {
   list-style: none;
   display: flex;
@@ -67,4 +72,36 @@ code {
 .search-res p {
   margin: 10px;
   font-size: 18px;
+}
+
+.search-res img {
+  width: 300px;
+  margin-top: 30px;
+}
+
+.booking {
+ 
+}
+
+.movie-show {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 30px;
+ 
+  /* flex-wrap: wrap; */
+}
+.movie-show li {
+  flex: 1;
+  padding-right: 30px;
+}
+
+.movie-show img {
+  width: 216.354px;
+  height: 325px;
+  border-radius: 5px;
+  margin-top: 30px;
+  background: lightgray 50% / cover no-repeat;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
