--- a/src/index.css
+++ b/src/index.css
@@ -171,9 +171,30 @@ code {
   list-style: none;
 }
 
+.show-list h3 {
+  color: #6C6D71;
+}
+
+.show-list p {
+  padding-right: 30px;
+  color: #6C6D71;
+}
+
 /* movie details page */
 
 .md-cont {
   display: flex;
   flex-direction: row;
+}
+
+/* showing page */
+
+.boka {
+  background-color: #21201E;
+  width: 80px;
+  height: 30px;
+  border-radius: 10px;
+  border:  0px;
+  color: #6C6D71;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
