--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,9 @@ code {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.movie-show select {
+  width: 225px;
+}
 
 /* show list page */
 .show-list {
@@ -165,6 +168,7 @@ code {
   width: 320px;
   border-radius: 15px;
   background-color: #21201E;
+  margin-top: 15px;
 }
 
 .show-list ul {
@@ -189,7 +193,7 @@ code {
 
 /* showing page */
 
-.boka {
+/* .boka {
   background-color: #21201E;
   width: 80px;
   height: 30px;
@@ -197,4 +201,44 @@ code {
   border:  0px;
   color: #6C6D71;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+} */
+
+
+
+
+/* booking */
+.booking {
+ 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.booking ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.available-seat {
+  background-color: green;
+  width: 200px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.booked-seat {
+  background-color: red; 
+  width: 200px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.booked-seat button{
+  opacity: 0.5;
+}
+
+.selected-seat {
+  background-color: yellow;
 }
