--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #383B44;
+  background: #445a67;
+  color: #e9decb;
 }
 
 code {
@@ -16,7 +17,7 @@ code {
 .links {
   width: 100%;
   height: 120px;
-  background: #261616;
+  background: #5d635f;
   padding-top: 100px;
   display: flex;
   flex-direction: row;
@@ -26,7 +27,7 @@ code {
 .links a {
   text-decoration: none;
   padding: 15px;
-  color: #6C6D71;
+  color: #e9decb;
   font-size: 32px;
 
 }
@@ -37,6 +38,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 
 .home {
@@ -55,9 +57,8 @@ code {
   margin: 15px 25px;
   width: 350px;
   height: 475px;
-  color: #6C6D71;
   border-radius: 15px;
-  background: #21201E;
+  background: #5d635f;
   box-shadow: 0px 4px 20px 0px rgba(217, 217, 217, 0.07);
   display: flex;
   flex-direction: column;
@@ -107,6 +108,8 @@ code {
   border-radius: 15px;
   padding-left: 30px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background-color: #bbb4a2;
+  border: solid 0px;
 }
 
 .search-res p {
@@ -156,8 +159,14 @@ code {
 
 .movie-show select {
   width: 225px;
+  background-color: #bbb4a2;
 }
 
+.movie-show button {
+  background-color: #bbb4a2;
+  border: solid 0px;
+  border-radius: 5px;
+}
 /* show list page */
 .show-list {
   padding-top: 10px;
@@ -167,7 +176,7 @@ code {
   margin-bottom: 30px;
   width: 320px;
   border-radius: 15px;
-  background-color: #21201E;
+  background-color: #5d635f;
   margin-top: 15px;
 }
 
@@ -175,13 +184,10 @@ code {
   list-style: none;
 }
 
-.show-list h3 {
-  color: #6C6D71;
-}
+
 
 .show-list p {
   padding-right: 30px;
-  color: #6C6D71;
 }
 
 /* movie details page */
@@ -191,24 +197,12 @@ code {
   flex-direction: row;
 }
 
-/* showing page */
-
-/* .boka {
-  background-color: #21201E;
-  width: 80px;
-  height: 30px;
-  border-radius: 10px;
-  border:  0px;
-  color: #6C6D71;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-} */
-
-
-
+.movie-details h2 {
+  margin-left: 30px;
+}
 
 /* booking */
 .booking {
- 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -220,25 +214,25 @@ code {
 }
 
 .available-seat {
-  background-color: green;
+  background-color: rgb(76, 123, 76);
   width: 200px;
   margin-bottom: 10px;
   display: flex;
   justify-content: space-between;
+  border-radius: 5px;
 }
 
 .booked-seat {
-  background-color: red; 
+  background-color: rgb(189, 74, 74); 
   width: 200px;
   margin-bottom: 10px;
   display: flex;
   justify-content: space-between;
+  border-radius: 5px;
 }
 
-.booked-seat button{
-  opacity: 0.5;
-}
-
-.selected-seat {
-  background-color: yellow;
+.booking-btn button{
+  background-color: #bbb4a2;
+  border: solid 0px;
+  border-radius: 5px;
 }
